--- a/ClienteEsis/app/src/main/res/layout/activity_main.xml
+++ b/ClienteEsis/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:orientation="vertical">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            app:title="Uber"
+            app:titleTextColor="@color/swatch_2"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginTop="24dp"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
+
+
     <fragment
+        android:layout_below="@+id/appbar"
         android:id="@+id/mapa"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="90"
         class="com.google.android.gms.maps.SupportMapFragment"/>
-    <Button
 
+<!--    android:background="?android:attr/selectableItemBackground"-->
+    <Button
+        android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
         android:id="@+id/btn_pedir_taxi"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="10"
         android:text="Pedir Taxi"
         android:onClick="pedir"
 
+        android:background="#46060707"
+
+        android:textColor="@color/swatch_1"
+
         android:enabled="false"
         />
-</LinearLayout>
+</RelativeLayout>
