--- a/ConductorTaxi/app/src/main/res/layout/activity_main.xml
+++ b/ConductorTaxi/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
+<!--    <fragment-->
+<!--        android:id="@+id/mapa"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="90"-->
+<!--        class="com.google.android.gms.maps.SupportMapFragment"/>-->
+<!--    <EditText-->
+<!--        android:id="@+id/miedt"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="10"-->
+<!--        android:text="MI NOMBRE"-->
+<!--        />-->
+
     <fragment
         android:id="@+id/mapa"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="90"
         class="com.google.android.gms.maps.SupportMapFragment"/>
-    <EditText
-        android:id="@+id/miedt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:text="MI NOMBRE"
-        />
 
-    <Button
+    <LinearLayout
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnfinalizar"
-        android:text="Finalizar"
-        android:visibility="invisible"
-        android:onClick="mifinalizar"/>
-</LinearLayout>
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/miedt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="MI NOMBRE"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btncerca"
+            android:text="Taxi Cerca"
+            android:enabled="false"
+            android:onClick="micerca"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnfinalizar"
+            android:text="Finalizar"
+            android:visibility="invisible"
+            android:onClick="mifinalizar"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
