--- a/miCrudMoongose/app/src/main/res/values/colors.xml
+++ b/miCrudMoongose/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="color_hint">#FFB3B3B3</color>
 </resources>
