obtain token - fcm
fcm token

--- a/MiFCMESIS/app/src/main/res/layout/activity_main.xml
+++ b/MiFCMESIS/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,11 +8,39 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".MainActivity">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:padding="10dp"
+
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/btn_obtener_token"
+            style="@style/Widget.AppCompat.Button.Colored"
+
+            android:text="Obtener token"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:id="@+id/tv_mitoken"
+            android:gravity="center"
+            android:text="Mi token"
+            android:textColor="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            />
+
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/llTopics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
