--- a/FirebaseDevicetoDevice/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/FirebaseDevicetoDevice/app/src/main/res/layout/activity_bottom_nav.xml
@@ -4,11 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailsActivity">
+    tools:context=".BottomNavActivity">
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        />
 
     <fragment
-        android:id="@+id/fragment2"
+        android:id="@+id/nav_host_fragment_bottom"
         android:name="androidx.navigation.fragment.NavHostFragment"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
@@ -16,6 +28,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph" />
-    
+        app:navGraph="@navigation/nav_graph_bottom" />
 </androidx.constraintlayout.widget.ConstraintLayout>
