--- a/FirebaseDevicetoDevice/app/src/main/res/layout/activity_main.xml
+++ b/FirebaseDevicetoDevice/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
 
@@ -11,12 +12,9 @@
     tools:context=".MainActivity">
 
     <ScrollView
-
         android:padding="20dp"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,6 +65,7 @@
             android:maxLines="3"
             android:background="@android:drawable/editbox_background_normal"/>
     </LinearLayout>
+
     <Button
         style="@style/Base.Widget.AppCompat.Button"
         android:id="@+id/btnSend"
@@ -77,10 +76,54 @@
         android:textStyle="bold"
         android:background="@color/colorAccent"
         android:layout_marginTop="40dp"
-        android:text="Send Notification" />
 
+        android:text="Send Notification" />
 
 
     </LinearLayout>
     </ScrollView>
-</LinearLayout>
+
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/add"-->
+<!--android:visibility="gone"-->
+<!--        app:backgroundTint="@color/colorAccent"-->
+<!--        android:onClick="click_fab_nav"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:src="@drawable/ic_chevron_right_black_24dp" />-->
+
+    <View
+        android:layout_above="@id/btn_nav"
+        android:layout_width="wrap_content"
+        android:minHeight="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/colorAccent"
+        android:layout_height="2dp"/>
+    <Button
+        android:id="@+id/btn_nav"
+        android:text="Navigation "
+        android:onClick="click_fab_nav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        />
+
+    <Button
+
+        android:text="Bottom Navigation"
+        android:onClick="click_fab_bottom_nav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        />
+</RelativeLayout>
