--- a/FirebaseDevicetoDevice/app/src/main/res/values/colors.xml
+++ b/FirebaseDevicetoDevice/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#2A9D8F</color>
+    <color name="colorPrimaryDark">#264653</color>
     <color name="colorAccent">#D81B60</color>
+
+<!--    264653-->
+<!--    2A9D8F-->
+<!--    E9C46A-->
+<!--    F4A261-->
+<!--    E76F51-->
 </resources>
