--- a/MiFCMESIS/app/src/main/res/layout/activity_main.xml
+++ b/MiFCMESIS/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,10 @@
             />
 
         <TextView
+
+            android:enabled="true"
+            android:textIsSelectable="true"
+            android:focusable="true"
             android:id="@+id/tv_mitoken"
             android:gravity="center"
             android:text="Mi token"
